--- a/.github/workflows/blog-post-workflow.yml
+++ b/.github/workflows/blog-post-workflow.yml
@@ -12,4 +12,4 @@ jobs:
       - uses: actions/checkout@v2
       - uses: gautamkrishnar/blog-post-workflow@v1
         with:
-          feed_list: "https://www.vceed.com/"
+          feed_list: "https://0xlilnas.hashnode.dev/rss.xml"
